--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-DB_HOST=
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
-DB_PORT=
+# DB_HOST=127.0.0.1
+# DB_USER=postgres
+# DB_PASSWORD=atio02
+# DB_NAME=recipe_b13
+# DB_PORT=5432
+# JWT_TOKEN=123123
