--- a/.env
+++ b/.env
@@ -1,7 +1,15 @@
 
-DB_HOST=147.139.210.135
-DB_USER=atio
-DB_PASSWORD=a423251
-DB_NAME=atio01
+# DB_HOST=147.139.210.135
+# DB_USER=atio
+# DB_PASSWORD=a423251
+# DB_NAME=atio01
+# DB_PORT=5432
+DB_HOST=127.0.0.1
+DB_USER=postgres
+DB_PASSWORD=atio02
+DB_NAME=recipe_b13
 DB_PORT=5432
 JWT_TOKEN=123123
+PHOTO_NAME=dvk5zscth
+PHOTO_KEY=277226139636475
+PHOTO_SECRET=uYAu6X0YVeNE-YXr_Kl9ENah8pQ
