--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 # DB_NAME=atio01
 # DB_PORT=5432
 DB_HOST=147.139.210.135
-DB_USER=postgres
+DB_USER=atio
 DB_PASSWORD=atio02
 DB_NAME=atio01
 DB_PORT=5432
