--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@
 # DB_PORT=5432
 DB_HOST=147.139.210.135
 DB_USER=atio
-DB_PASSWORD=atio02
+DB_PASSWORD=a423251
 DB_NAME=atio01
 DB_PORT=5432
 JWT_TOKEN=123123
